--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <h1> Apple Stock Chart </h1>
   <p>The following chart was adapted from Mike Bostock.</p>
   <a href="example-chart.html">Link to example D3 chart!</a>
+  <script src="//d3js.org/d3.v3.min.js"></script>
+  <script src="scripts/chart.js"></script>
 </body>
 
 </html>
