Homework task complete

--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-	<div id="apple-stock-chart-container">
-  		<h1> Apple Stock Chart </h1>
-  		<p>The following chart was adapted from Mike Bostock.</p>
-  	</div>
-  	
-  	<a href="example-chart.html">Link to example D3 chart!</a><br>	
-  
+  <h1> Apple Stock Chart </h1>
+  <p>The following chart was adapted from Mike Bostock.</p>
+	<div id='apple-stock-chart' class='chart'></div>  	
+  <a href="example-chart.html">Link to example D3 chart!</a><br>	
   <script src="//d3js.org/d3.v3.min.js"></script>
   <script src="scripts/chart.js"></script>
 </body>
