--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h1> Apple: The Profitable Fruit </h1>
   <p> If you bought apple stock a long time ago you're probably rich. That's because it went up really fast! See for yourself in the chart below. </p>
   <div id='apple-stock-chart' class='chart'></div>
+  <div id='apple-stock-chart-2' class='chart'></div>
   <h2> Apple Stocks are Really Rising! </h2>
   <h3> ...more than any other fruit-based corporation. </h3>
 
